04_results/Summary/envoy_proof_mtls1.2-chacha_20260901_090914.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1alpha3
  kind: EnvoyFilter
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1alpha3","kind":"EnvoyFilter","metadata":{"annotations":{},"name":"force-cipher-k6-client","namespace":"default"},"spec":{"configPatches":[{"applyTo":"CLUSTER","match":{"cluster":{"name":"outbound|8000||httpbin.default.svc.cluster.local"},"context":"SIDECAR_OUTBOUND"},"patch":{"operation":"MERGE","value":{"transport_socket":{"name":"envoy.transport_sockets.tls","typed_config":{"@type":"type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Upstr [...]
    creationTimestamp: "2026-09-01T07:09:23Z"
    generation: 1
    name: force-cipher-k6-client
    namespace: default
    resourceVersion: "40734"
    uid: 2b18661c-3b70-4845-a2a1-f45d7505ef7c
  spec:
    configPatches:
    - applyTo: CLUSTER
      match:
        cluster:
          name: outbound|8000||httpbin.default.svc.cluster.local
        context: SIDECAR_OUTBOUND
      patch:
        operation: MERGE
        value:
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
              common_tls_context:
                tls_params:
                  cipher_suites:
                  - ECDHE-RSA-CHACHA20-POLY1305
                  tls_maximum_protocol_version: TLSv1_2
                  tls_minimum_protocol_version: TLSv1_2
    workloadSelector:
      labels:
        app: k6
- apiVersion: networking.istio.io/v1alpha3
  kind: EnvoyFilter
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1alpha3","kind":"EnvoyFilter","metadata":{"annotations":{},"name":"force-downgrade-httpbin-server","namespace":"default"},"spec":{"configPatches":[{"applyTo":"FILTER_CHAIN","match":{"context":"SIDECAR_INBOUND","listener":{"filterChain":{"destinationPort":8080,"transportProtocol":"tls"}}},"patch":{"operation":"MERGE","value":{"transport_socket":{"name":"envoy.transport_sockets.tls","typed_config":{"@type":"type.googleapis.com/envoy.extensions.transport_ [...]
    creationTimestamp: "2026-09-01T07:09:23Z"
    generation: 1
    name: force-downgrade-httpbin-server
    namespace: default
    resourceVersion: "40733"
    uid: 2650b75d-9deb-402a-af9a-208c4a4e345f
  spec:
    configPatches:
    - applyTo: FILTER_CHAIN
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            destinationPort: 8080
            transportProtocol: tls
      patch:
        operation: MERGE
        value:
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_params:
                  cipher_suites:
                  - ECDHE-RSA-CHACHA20-POLY1305
                  tls_maximum_protocol_version: TLSv1_2
                  tls_minimum_protocol_version: TLSv1_2
    workloadSelector:
      labels:
        app: httpbin
kind: List
metadata:
  resourceVersion: ""
